ressources/production/apps/speedtest-plotter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedtest-plotter
  name: speedtest-plotter
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: speedtest-plotter
  replicas: 0
  template:
    metadata:
      labels:
        app: speedtest-plotter
    spec:
      containers:
      - name: speedtest-plotter
        image: ansemjo/speedtest:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /data
          name: speedtest-plotter-data
      volumes:
        - name: speedtest-plotter-data
          persistentVolumeClaim:
            claimName: speedtest-plotter-data
